tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HardcoreEnderExp-AAAAAAAAAAAAAAAAAAAAKw==__AdvancedGemEncha-AAAAAAAAAAAAAAAAAAAJPg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2366,
  "prerequisites": [
    2364
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Transference Gem and Spatial Gems can be enhanced in a similar manner, using End Powder and the enhancement item.\n\nRight-click the End Powder, choose an enchantment, and fill with four End Powder and four ectoplasm to teleport a monster, four leather to teleport a whole group of players, and four endium ingots to increase the capacity of the gem.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Advanced Gem Enchantment",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2364
  ],
  "rewards": [],
  "tasks": []
}
