tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HardcoreEnderExp-AAAAAAAAAAAAAAAAAAAAKw==__Curses-AAAAAAAAAAAAAAAAAAAJSA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2376,
  "prerequisites": [
    2372
  ],
  "properties": {
    "auto_claim": false,
    "desc": "A Curse is a magical powder that attaches itself to an area of blocks, a mob, or a player, crafted using living matter, End Powder and specific ingredients.\n\nIt can be either placed right on a block or an entity, or thrown. If it gets thrown into a group of entities, it will have a chance to hit more than one at the same time.\n\nCurses eventually disappear, but they can be made eternal by crafting them with stardust and an arcane shard. Eternal Curses will stay forever on blocks and mobs, and longer than normal Curses on players.\n\nCurses placed on blocks are only visible to the player who cast it, and for a short duration to players affected by it.\n\nGetting very close to a Curse makes it visible without having it affect you, but it requires extreme carefulness.\n\nIt is possible to remove Curses by using a Potion of Purity.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Curses",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2372
  ],
  "rewards": [],
  "tasks": []
}
