tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HardcoreEnderExp-AAAAAAAAAAAAAAAAAAAAKw==__EnderTowers-AAAAAAAAAAAAAAAAAAAJLQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2349,
  "prerequisites": [
    2350
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Once you've explored a bit, you'll find large towering buildings that increase in difficulty as you go upwards, culminating in a dangerous boss fight.\n\nBe wary and bring strong protective armor!\n\nIf you are incredibly lucky, these towers can also offer rare items or blocks.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Ender Towers",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2350
  ],
  "rewards": [],
  "tasks": []
}
