tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HardcoreEnderExp-AAAAAAAAAAAAAAAAAAAAKw==__EnderpearlEnchan-AAAAAAAAAAAAAAAAAAAJTQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2381,
  "prerequisites": [
    2350
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Enhanced Ender Pearls are a special version of vanilla Ender Pearls with one or more special effects (enhancements).\n\nThe way to make enhanced pearls is to right-click with End Powder in your hand to modify your ender pearl. You can continue adding as many effects to one pearl as you want.\n\nThese effects are useful when throwing the pearl, for pearl teleportation effects.\n\nNatural occurrence:\nIt is possible to find pearls with random effects in a Dungeon Tower's loot chests.\n\nEnhancements:\nNo fall damage (Wool)\nUpon the pearl's landing, the player will not receive any fall damage.\n\nNo gravity (Feather)\nThe pearl will not follow the rules of gravity, which makes it possible to throw it straight up. After 10 seconds of flight, the pearl is automatically destroyed without any teleportation or fall damage.\n\nIncreased range (String)\nUnlike the no gravity effect, the pearl will fall down due to gravity, but will do so 25% slower. If the pearl has the no gravity effect too, it will override this effect.\n\nDouble speed (Gold Nugget)\nIncreases the pearl's speed by a factor of 2, but won't change the flight trajectory. This can be helpful if you are in a bad situation (fell in lava, swarm of mobs around...) and need to be saved very quickly. In combination with the riding effect, you may notice slight stuttering on a server.\n\nExplosive (Gunpowder)\nUpon landing, the pearl will explode with radius of 2.7 (TNT has radius of 4). This will not harm the thrower as long as they are far enough from the landing spot.\n\nFreeze (Snowball)\nThe pearl will freeze mobs and players within 5 blocks of the landing spot for at least 4 seconds. Just as with the explosive effect, this will not affect the thrower unless they throw the pearl close to them, or have the riding effect applied. This effect is also followed by ice cracking sound and snow particles.\n\nRiding (Lead)\nThe thrower will \"ride\" the pearl to its destination. During the ride, if another pearl with this effect is thrown, the previous pearl will destroy itself and deal fall damage (unless No fall damage effect is applied).\n\nTrivia:\nThe Enhanced Ender Pearls can still be used for crafting an Eye of Ender.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Enderpearl Enchantments",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2350
  ],
  "rewards": [],
  "tasks": []
}
