tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HardcoreEnderExp-AAAAAAAAAAAAAAAAAAAAKw==__EnergyWand-AAAAAAAAAAAAAAAAAAAJNQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2357,
  "prerequisites": [
    2356
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Energy Clusters have different health levels, which affect the regeneration (or leaking) speed.\n\nClusters can be moved using Energy Wand. Moving them too far or across dimensions can have negative effect on their health.\n\nBlocks that use Energy will take it from Clusters up to 16 blocks away, and from the environment if placed in the End.\n\nItems that use Energy automatically refill in the End, or can be used on a Cluster to start and stop draining the Energy.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Energy Wand",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2356
  ],
  "rewards": [],
  "tasks": []
}
